# AICareerOptimizationOpenENV

./: Dockerfile  README.md  analysis.py  app.py  environment.py  grader.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py
